[package]
name = "disrust"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
wait-timeout = "0.2"
rustfmt-nightly = "1.4.19"
rust-argon2 = "0.8"
image = "0.23"
